=== Deluge 1.2.0_rc6 (In Development) ===
==== Core ====
	* Fix file renaming
	* Fix tracker host filtering (Closes #1106)

==== GtkUI ====
	* Fix #1104, #735 use path.utf-8 if available

==== Windows ====
	* Fix displaying folders in the add torrent dialog

==== Blocklist ====
	* Fix blocklist status icon not opening the blocklist preference
	  page in certain locales

=== Deluge 1.2.0_rc5 (17 December 2009) ===
==== Web ====
	* Swap order of buttons in Remove window (Closes #1083)
	* Change the compressed js script to deluge-all.js to avoid naming
	  conflicts on case-sensitive filesystems.
	* Apply patch from adios fixing the cookie date
	* Add tooltips to the statusbar items
	* Add disk usage to the statusbar
	* Add a ToggleField widget and use this on the Downloads preferences
	  page allowing the movecom/copytorrent/autoadd boxes to be enabled.
	* Fix enabling plugins.
	* Implement installing plugins.
	* Update some icons
	* Fixed #1075 (changing priority on a whole folder doesn't work)

==== GtkUI ====
	* Attempt to register as the default magnet uri handler in GNOME on startup
	* Properly show 100.00% and reduce number of progress bar updates during a
	  torrent creation
	* Fix crash in Windows when creating a torrent
	* Add button to Other preferences to associate magnet links with Deluge
	* Fix uploading plugins when the daemon is not localhost
	* Fix #692 no longer require tray password when quitting from the tray icon
	  while the window is visible.
	* Fix #782 do not ask for tray password when window is not minimized to tray
	* Fix #1036 autoconnecting to localhost daemon on start-up
	* Fix issue where hosts will show up erroneously as Offline
	* Add #891 remove torrents by pressing the Delete key
	* Fix issue where stoping a daemon that you aren't connected to causes the
	  gtkui to shutdown the currently connected daemon.
	* Fix #594 tray password dialog freeze in Windows
	* Made the password dialog prettier
	* Fix #1086 deprecated gtk.Tooltips usage